# ntied

./: .gitignore  Cargo.toml  LICENSE-APACHE.txt  LICENSE.md  NOTICE.txt  README.md  flake.nix
.github/workflows/: ci.yml
ntied/: .gitignore  Cargo.toml  build.rs
ntied-crypto/: Cargo.toml
ntied-crypto/src/: lib.rs
ntied-server/: Cargo.toml
ntied-server/src/: main.rs  server.rs
ntied-transport/: Cargo.toml
ntied-transport/src/: address.rs  byteio.rs  connection.rs  discovery.rs  lib.rs  packet.rs  server_connection.rs  server_message.rs  transport.rs
ntied-transport/tests/: address_tests.rs  byteio_tests.rs  packet_tests.rs  server_message_tests.rs  transport_tests.rs
ntied/benches/: lms_bench.rs
ntied/examples/: audio_capture.rs  audio_diagnostic.rs  audio_echo.rs  audio_playback.rs  codec_benchmark.rs
ntied/src/: lib.rs  main.rs
ntied/src/audio/: capture.rs  capture_stream.rs  codec.rs  decoder.rs  encoder.rs  jitter_buffer.rs  manager.rs  mod.rs  playback.rs  resampler.rs  ringtone.rs
ntied/src/audio/codec/: adpcm.rs  manager.rs  mod.rs  negotiation.rs  opus_codec.rs  raw.rs  traits.rs
ntied/src/audio/codec/sea/: decoder.rs  encoder.rs  lms.rs  mod.rs
ntied/src/call/: handle.rs  listener.rs  manager.rs
ntied/src/chat/: handle.rs  listener.rs  manager.rs  mod.rs
ntied/src/config/: mod.rs
ntied/src/contact/: handle.rs  listener.rs  manager.rs
ntied/src/models/: config.rs  contact.rs  message.rs  mod.rs  types.rs
ntied/src/packet/: base.rs  call.rs  chat.rs  contact.rs  mod.rs
ntied/src/screen/: mod.rs
ntied/src/storage/: base.rs
ntied/src/ui/: app.rs  listener.rs  mod.rs  theme.rs
ntied/src/ui/core/: mod.rs  screen.rs
ntied/src/ui/screens/: call.rs  chat_list.rs  init.rs  mod.rs  settings.rs  unlock.rs
ntied/tests/: audio_chain_test.rs  audio_diagnostics_test.rs  audio_manager_tests.rs  audio_quality_test.rs  audio_resampling_tests.rs  audio_stability_test.rs  capture_stream_tests.rs  codec_integration_test.rs  codec_integration_tests.rs  codec_sample_rate_test.rs  lms_integration_test.rs  models_tests.rs  playback_stream_tests.rs  ringtone_tests.rs  test_chat_manager.rs  test_contact_manager.rs
