[workspace]
members = [
    "ntied",
    "ntied-crypto",
    "ntied-server",
    "ntied-transport",
]
resolver = "3"

[workspace.package]
license = "Apache-2.0"

[workspace.dependencies]
ntied-crypto = { path = "ntied-crypto" }
ntied-server = { path = "ntied-server" }
ntied-transport = { path = "ntied-transport" }
tokio = { version = "1" }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
async-trait = "0.1"
