[package]
name = "ntied"
version = "0.1.0"
edition = "2024"
license.workspace = true

[dependencies]
ntied-crypto = { workspace = true }
ntied-transport = { workspace = true }
async-trait = { workspace = true }
iced = { version = "0.13", features = ["tokio", "debug", "svg"] }
tokio = { workspace = true, features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
hex = "0.4"
sha2 = "0.10"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
tokio-sqlite = { version = "0.*", features = ["bundled", "bundled-sqlcipher"] }
argon2 = "0.5"
rand = "0.8"
uuid = { version = "1.18.1", features = ["v7", "serde"] }
base64 = "0.22"
lazy_static = "1"
dirs = "5.0"
cpal = "0.15"
parking_lot = "0.12"
ringbuf = "0.3"
image = "0.25"
xcap = "0.0.12"

[build-dependencies]
winres = "0.1"
image = "0.25"
resvg = "0.36"
usvg = "0.36"
tiny-skia = "0.11"

[dev-dependencies]
ntied-server = { workspace = true }
tracing-test = "0.2.5"
tempfile = "3.8"
criterion = "0.5"
